syntax = "proto3";

package encservice.v1;

import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";
//import "google/protobuf/any.proto";
import "encservice/v1/request_response.proto";

service EncService {
    rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse) {}
    rpc AddTx(AddTxRequest) returns (AddTxResponse) {}
    rpc Status(StatusRequest) returns (StatusResponse) {}
    rpc Reset(ResetRequest) returns (ResetResponse) {}
    rpc Pending(PendingRequest) returns (PendingResponse) {}
}


service ChainService {
    rpc GetBlock(BlockRequest) returns (BlockResponse) {}
    rpc GetBalance(BalanceRequest) returns (BalanceResponse) {}
    rpc GetNonce(NonceRequest) returns (NonceResponse) {}
    rpc LatestHeader(LatestHeaderRequest) returns (LatestHeaderResponse) {}
}